--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -34,3 +34,25 @@
   .form-button:hover {
     background-color: #0056b3;
   }
+
+
+
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.switch-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #008cff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.switch-button:hover {
+    background-color: #0057b3da;
+}
