--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -66,3 +66,20 @@ div {
   form input[type="submit"]:hover {
     background-color: #0056b3;
   }
+
+  .searchdiv{
+    background-color: #eee;
+    height: 100vh;
+    width: 100vw;
+  }
+  .search-bar-container{
+    padding-top: 20vh;
+    width: 40%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+    
+  
+  }
