--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -1,6 +1,42 @@
-.about-content {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
+   body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      
+    }
+    
+    .about-content {
+      padding: 20px;
+      max-width: 800px;
+      margin: 0 auto;
+      
+    }
+    
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    
+    .image {
+      display: flex;
+      width: 30%;
+      height: 35%;
+      margin: 0 auto;
+      display: grid;
+ 
+    }
+    
+    .text-content {
+      width: 70%;
+      margin-left: 20px;
+      margin-top: 50px;
+    }
+    
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+    
+    li {
+      margin-bottom: 10px;
+    }
