--- a/frontend/src/styles/Hotel.css
+++ b/frontend/src/styles/Hotel.css
@@ -1,9 +1,11 @@
 .hotel-container{
         
-        padding: 10px;
+        padding: 10px 80px;
         margin: 20px 0;
         border: 1px solid #ccc;
-        border-radius: 5px;
+        border-radius: 20px;
+        width: 97%;
+        
         
       
   }
