--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -1,4 +1,4 @@
-/* .input-wrapper{
+.input-wrapper{
     background-color: white;
     width: 100%;
     border-radius: 10px;
@@ -7,7 +7,7 @@
     box-shadow: 0px 0px 8px 8px #ddd;
     display: flex;
     align-items: center;
-} */
+}
 input{
     background-color: transparent;
     border: none;
